WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128037
REGRESSION (
r163027
?): CrashTracer: [USER] com.apple.WebKit.WebContent.Development at com.apple.JavaScriptCore: JSC::ArrayProfile::computeUpdatedPrediction + 4
https://bugs.webkit.org/show_bug.cgi?id=128037
Summary
REGRESSION (r163027?): CrashTracer: [USER] com.apple.WebKit.WebContent.Develo...
Michael Saboff
Reported
2014-01-31 21:55:48 PST
It appears that we need to allocate an ArrayProfile for op_call_varargs. Patch in the works.
Attachments
Patch
(2.98 KB, patch)
2014-01-31 23:00 PST
,
Michael Saboff
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2014-01-31 21:56:20 PST
<
rdar://problem/15940395
>
Michael Saboff
Comment 2
2014-01-31 23:00:46 PST
Created
attachment 222874
[details]
Patch
Mark Lam
Comment 3
2014-02-01 00:14:29 PST
Comment on
attachment 222874
[details]
Patch r=me
Geoffrey Garen
Comment 4
2014-02-01 00:29:14 PST
Nice!
Michael Saboff
Comment 5
2014-02-01 07:26:06 PST
Committed
r163241
: <
http://trac.webkit.org/changeset/163241
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug